fix pin button in mobile with z-index: 1

--- a/app/styles/_filterIsActive.scss
+++ b/app/styles/_filterIsActive.scss
@@ -36,6 +36,7 @@
 .mobile-filter-button-r{
     font-size: 0.8em;
     float: right;
+    z-index: 1;
 }
 
 .filter-box {
